Admin(Table for graduates)

--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -8,7 +8,7 @@
 </style>
 <!-- Topbar -->
 <form class="" action="" method="GET">
-  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+  <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" style="position: sticky; top: 0;">
 
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
