--- a/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
@@ -32,20 +32,32 @@
     .th-w-10{
       width:10% !important;
     }
+
   </style>
 
 <!-- Begin Page Content -->
+
+
+  <div class="main-sticky">
 <div class="container-fluid">
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3 bg-gradient-info">
             <h6 class="m-0 font-weight-bold text-black">SCHOOL REPORTS</h6>
+              </div>
         </div>
+
+        </div>
+        </div>
+
+
+
         <div class="card-body">
             <div class="table-responsive">
                 <table id="datatables" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
+
                             <th class="th-w-20" style="white-space: nowrap">School</th>
                             <th class="th-w-20" style="white-space: nowrap">Number of Graduates</th>
                             <th class="th-w-20" style="white-space: nowrap">Number of Employed</th>
@@ -129,7 +141,7 @@
                           <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
                       </tr>
                       <tr>
-                          <td class="th-w-20" style="white-space: nowrap"><a href="url">Pinamungajan Extension Campuss</a></td>
+                          <td class="th-w-20" style="white-space: nowrap"> <a href="url">Pinamungajan Extension Campuss</a></td>
                           <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                           <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
                           <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
