--- a/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/sidebar.html
@@ -60,6 +60,11 @@
         </div>
     </li>
 
+    <li class="nav-item sticky">
+        <a class="nav-link" href="{% url 'user' %}">
+            <i class="fas fa-users"></i>
+            <span>Graduates</span></a>
+    </li>
     <!-- Divider -->
     <hr class="sidebar-divider sticky">
 
