--- a/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/topbar.html
@@ -18,30 +18,30 @@
       <!-- Topbar Navbar -->
 
       <ul class="navbar-nav ml-auto">
-        <!-- Nav Item - Alerts -->
 
         <div class="topbar-divider d-none d-sm-block text-dark"></div>
 
           <!-- Nav Item - User Information -->
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
-              {% if user.profile_picture %}
-                <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
-              {% else %}
-                <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
-              {% endif %}
-          </a>
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</span>
+                {% if user.profile_picture %}
+                  <img class="img-profile rounded-circle" src="{{request.user.profile_picture.url}}">
+                {% else %}
+                  <img class="img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
+                {% endif %}
+            </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown">
+                  {%if request.user %}
 
-                  <a class="dropdown-item" href="{% url 'adprof' request.user.id %}">
+                  <a class="dropdown-item" href="{% url 'profile_picture' request.user.id %}">
                       <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                       Profile
                   </a>
-
+                  {% endif %}
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}">
                       <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
