--- a/graduatetracer/tracer/templates/tracer/adminreal/user.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/user.html
@@ -21,52 +21,58 @@
         </form>
       </div>
     </div>
-    <div class="row">
-    {% for user_info in user_infos %}
-      {% if user_info.approved %}
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mby-1">
-          <div class="card shadow-sm">
-            <a class="card-link" href="{% url 'userinformations' user_info.id %}">
-              <div class="card-header bg-gradient-info text-center text-white">
-                <div class="mt-2">
-                  {% if user_info.profile_picture %}
-                    <img class="img-profile rounded-circle shadow-sm" src="{{user_info.profile_picture.url}}" width="100" height="90" alt="User-Profile-Image">
-                  {% endif %}
-                  <div class="mt-1">
-                    <p>{{user_info.first_name}} {{user_info.middle_name}} {{user_info.last_name}}</p>
-                    <p>{{user_info.email}}</p>
-                  </div>
+    </div>
+
+    <div class="container-fluid">
+        <!-- DataTales Example -->
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 bg-c-lite-green">
+                <h6 class="m-0 font-weight-bold text-black">PENDING ACCOUNTS</h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="dataTables_filter" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th class="th-w-20" style="white-space: nowrap">Name</th>
+                                <th class="th-w-20" style="white-space: nowrap">Email</th>
+                                <th class="th-w-20" style="white-space: nowrap">ID Number</th>
+                                <th class="th-w-20" style="white-space: nowrap">School</th>
+                                <th class="th-w-20" style="white-space: nowrap">Employment status</th>
+                                <th class="th-w-20" style="white-space: nowrap">Action</th>
+
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                          {% for gradAcct in gradAccts %}
+                              {% if gradAcct.pending %}
+                                {% if gradAcct.school == request.user.school %}
+                                  <tr>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.IDNum}}</td>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.first_name}} {{gradAcct.middle_name}} {{gradAcct.last_name}}</td>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.email}}</td>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.school}}</td>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.course_type}}</td>
+                                      <td class="th-w-20" style="white-space: nowrap">{{gradAcct.date_graduated}}</td>
+                                      <td class="text-center">
+                                          <div class="pl-2 pr-2 pb-2 pt-1">
+                                              <a class="btn btn-success" href="{% url 'userinformation' gradAcct.id %}"><i class="fas fa-eye"></i></a>
+                                          </div>
+                                      </td>
+                                  </tr>
+                                  {% endif %}
+                              {% endif %}
+                            {% endfor %}
+                        </tbody>
+                    </table>
 
                 </div>
-              </div>
-            </a>
-            <div class="card-body">
-              <div class="mt-2">
-                  <div class="col-sm-12">
-                    <p>Skills: {{user_info.skill}}</p>
-                  </div>
-                  <div class="col-sm-12">
-                    <p>Date Graduated: {{user_info.date_graduated}}</p>
-                  </div>
-                  {% if user_info.employed %}
-                  <div class="col-sm-12">
-                    <p>Status: <span class="text-success">Employed</span></p>
-                  </div>
-                  <div class="col-sm-12">
-                    <p>Job Description: {{ user_info.job_description }}</p>
-                  </div>
-                  {% elif user_info.unemployed%}
-                  <div class="col-sm-12">
-                    <p>Status: <span class="text-danger">Unemployed</span></p>
-                  </div>
-                  {% endif%}
-              </div>
             </div>
-          </div>
         </div>
-      {% endif %}
-    {% endfor %}
+
+
     </div>
-  </div>
+
 
 {% endblock %}
