css, topbar, edit experience, jobsavailable

--- a/graduatetracer/tracer/templates/tracer/user/jobs_available.html
+++ b/graduatetracer/tracer/templates/tracer/user/jobs_available.html
@@ -63,10 +63,10 @@
 
 <div class="row">
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page1','Page2');"><h6>Tile View</h6></a>
+    <a href="#" class="btn bg-c-tile text-black shadow-lg" onclick="return show('Page1','Page2');"><h6>Tile View</h6></a>
   </div>
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
-    <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page2','Page1');"><h6>List View</h6></a>
+    <a href="#" class="btn bg-c-tile text-black shadow-lg" onclick="return show('Page2','Page1');"><h6>List View</h6></a>
   </div>
 
 
