--- a/graduatetracer/tracer/templates/tracer/user/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/user/topbar.html
@@ -61,7 +61,7 @@
                     {% if user_top_nav_notifications_counter != 0 %}
                     <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                         aria-labelledby="alertsDropdown">
-                        <h6 class="dropdown-header bg-c-lite-green" style="border:0;">
+                        <h6 class="dropdown-header" style="border:0;">
                             Notification
                         </h6>
                         {% for announcement in top_notif_announcements %}
