--- a/graduatetracer/tracer/templates/tracer/adminreal/adprof.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/adprof.html
@@ -18,7 +18,7 @@
         <div class="row mb-4">
           <div class="col-lg-5 mt-4 mb-4">
             <div class="col-lg-12 mt-4 image-field">
-                {% if user.profile_picture %}
+                {% if user_info.profile_picture %}
                   <img class="img-custom-border" src="{{request.user.profile_picture.url}}" id="photo">
                 {% else %}
                   <img class="img-fluid img-profile rounded-circle" src="{% static 'img/default_profile_2.png'  %}">
