--- a/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/display_user_management.html
@@ -61,7 +61,7 @@
                               <td class="th-w-20" style="white-space: nowrap">{{ad.first_name}} {{ad.middle_name}} {{ad.last_name}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
-                              <td class="th-w-20" style="white-space: nowrap">{{ad.user_type}}</td>
+                              <td class="th-w-20 text-center " style="white-space: nowrap">{{ad.user_type}}</td>
                           </tr>
                         {% endif %}
                       {% endfor %}
@@ -94,7 +94,7 @@
                               <td class="th-w-20" style="white-space: nowrap">{{ad.first_name}} {{ad.middle_name}} {{ad.last_name}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
-                              <td class="th-w-20" style="white-space: nowrap">{{ad.user_type}}</td>
+                              <td class="th-w-20 text-center " style="white-space: nowrap">{{ad.user_type}}</td>
                           </tr>
                         {% endif %}
                       {% endfor %}
@@ -127,7 +127,7 @@
                               <td class="th-w-20" style="white-space: nowrap">{{ad.first_name}} {{ad.middle_name}} {{ad.last_name}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
-                              <td class="th-w-20" style="white-space: nowrap">{{ad.user_type}}</td>
+                              <td class="th-w-20 text-center " style="white-space: nowrap">{{ad.user_type}}</td>
                           </tr>
                         {% endif %}
                       {% endfor %}
@@ -160,7 +160,7 @@
                               <td class="th-w-20" style="white-space: nowrap">{{ad.first_name}} {{ad.middle_name}} {{ad.last_name}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
-                              <td class="th-w-20" style="white-space: nowrap">{{ad.user_type}}</td>
+                              <td class="th-w-20 text-center " style="white-space: nowrap">{{ad.user_type}}</td>
                           </tr>
                         {% endif %}
                       {% endfor %}
@@ -193,7 +193,7 @@
                               <td class="th-w-20" style="white-space: nowrap">{{ad.first_name}} {{ad.middle_name}} {{ad.last_name}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
                               <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
-                              <td class="th-w-20" style="white-space: nowrap">{{ad.user_type}}</td>
+                              <td class="th-w-20 text-center " style="white-space: nowrap">{{ad.user_type}}</td>
                           </tr>
                         {% endif %}
                       {% endfor %}
