--- a/graduatetracer/tracer/templates/tracer/admin/browse.html
+++ b/graduatetracer/tracer/templates/tracer/admin/browse.html
@@ -65,11 +65,10 @@
   <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto m-auto pb-4">
     <a href="#" class="btn bg-c-lite-green text-black shadow-lg" onclick="return show('Page2','Page1');">Tile View</a>
   </div>
-
 </div>
 
 
-<div id="Page1" class="container bg-white pr-4 pl-4 pb-3">
+<div id="Page1" class="container-fluid bg-white pr-4 pl-4 pb-3">
   <div class="row ">
 
     <div class="row w-20">
@@ -89,6 +88,16 @@
       </div>
       <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
         <select id="query1" class="form-control" name="">
+          <option value="">Address</option>
+        {% for query in query_address_1 %}
+          {% if query %}
+          <option value="{{query}}">{{query}}</option>
+          {% endif %}
+        {% endfor %}
+        </select>
+      </div>
+      <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
+        <select id="query2" class="form-control" name="">
           <option value="">Category</option>
         {% for query in query_category %}
           {% if query %}
@@ -98,7 +107,7 @@
         </select>
       </div>
       <div class="col-xs-6 col-sm-9 col-md-9 col-lg-3 col-xl-3 p-1">
-        <select id="query2" class="form-control" name="">
+        <select id="query3" class="form-control" name="">
           <option value="">Salary</option>
         {% for query in query_salary %}
           {% if query %}
@@ -114,10 +123,10 @@
           <tr>
             <th class="th-w-20" style="white-space: nowrap">Company</th>
             <th class="th-w-20" style="white-space: nowrap">Job Name</th>
+            <th class="th-w-20" style="white-space: nowrap">Address</th>
             <th class="th-w-20" style="white-space: nowrap">Category</th>
             <th class="th-w-20" style="white-space: nowrap">Salary</th>
-            <th class="th-w-10" style="white-space: nowrap">Date Created</th>
-            <th class="th-w-10" style="white-space: nowrap">Option</th>
+            <th class="th-w-20" style="white-space: nowrap">Option</th>
           </tr>
       </thead>
       <tbody>
@@ -129,7 +138,12 @@
                 {% endif %}
               </td>
               <td class="th-w-20" style="white-space: nowrap">{{ad.title}}</td>
-              <td>
+              <td class="th-w-20" style="white-space: nowrap">
+                {% if ad.address_1 %}
+                  {{ad.address_1}}
+                {% endif %}
+              </td>
+              <td class="th-w-20" style="white-space: nowrap">
                   {% if ad.job_category %}
                     {{ad.job_category}}
                   {% endif %}
@@ -139,19 +153,18 @@
                   {{ad.salary}}
                 {% endif %}
               </td>
-              <td>{{ad.date_created|naturalday}}</td>
               <td option-table-wid>
-                <div class="row">
-                  <div class="col-lg-4 text-center pr-0">
+                <div class="row w-100 m-auto p-0">
+                  <div style="width:33.333%;" class="text-center pr-0">
                     <a class href="{% url 'view_ad' ad.id %}"><i class="fas fa-eye"></i></a>
                   </div>
-                  <div class="col-lg-4 text-center">
-                    <a class="dropdown-item text-info p-0" href="{% url 'update_ad' ad.id %}"><i class="mr-2 fas fa-wrench"></i></a>
+                  <div style="width:33.333%;" class="text-center">
+                    <a class="dropdown-item text-info p-0" href="{% url 'update_ad' ad.id %}"><i class="fas fa-wrench"></i></a>
                   </div>
-                  <div class="col-lg-4 text-center pl-0">
+                  <div style="width:33.333%;" class="text-center pl-0">
                     <form method="post" action="{% url 'delete_ad' ad.id %}" >
                       {% csrf_token %}
-                      <button type="submit" class="dropdown-item text-danger p-0"><i class="mr-2 fas fa-trash-alt"></i></button>
+                      <button type="submit" class="dropdown-item text-danger p-0"><i class="fas fa-trash-alt"></i></button>
                     </form>
                   </div>
                 </div>
@@ -236,23 +249,6 @@
 
                 </div>
               </div>
-              <!-- <div class="ml-auto">
-                <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-white"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                        aria-labelledby="dropdownMenuLink">
-                        <div class="dropdown-header">Options</div>
-                        <a class="dropdown-item text-info" href="{% url 'update_ad' ad.id %}"><i class="mr-2 fas fa-wrench"></i>Update</a>
-                        <form method="post" action="{% url 'delete_ad' ad.id %}" >
-                          {% csrf_token %}
-                          <button type="submit" class="dropdown-item text-danger"><i class="mr-2 fas fa-trash-alt"></i>Delete</button>
-                        </form>
-                    </div>
-                </div>
-              </div> -->
             </div>
           </div>
         </div>
@@ -317,7 +313,7 @@
     var table = $('#jobs').DataTable( {
       stateSave: false,
       "ordering": true,
-      "columnDefs" : [{"targets":3, "type":"date-eu"}],
+      "columnDefs" : [{"targets":4, "type":"date-eu"}],
       order: [],
 
     } );
@@ -329,6 +325,9 @@
     });
     $('#query2').on('change', function(){
        table.columns(3).search(this.value).draw();
+    });
+    $('#query3').on('change', function(){
+       table.columns(4).search(this.value).draw();
     });
 } );
 </script>
