--- a/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
+++ b/graduatetracer/tracer/templates/tracer/adminreal/school_report.html
@@ -1,16 +1,209 @@
-{%  extends 'tracer/adminreal/templates.html' %}
-
-{% load static %}
-{% load widget_tweaks %}
-
+{% extends 'tracer/adminreal/templates.html' %}
 {% block content %}
 
-  
+<style media="screen">
+    .none{
+      display:none;
+    }
 
+    .dataTables_wrapper{
+      z-index: 0;
+    }
+    .dataTables_length{
+      z-index: 2;
+    }
 
+    .dataTables_filter{
+      display: none;
+    }
 
+    .dropdown-filter{
+      top: 33px !important;
+      position: relative;
+      z-index: 1;
+    }
 
+    .dataTables_length{
+      padding-bottom: 10px;
+    }
+    .th-w-20{
+      width:20% !important;
+    }
+    .th-w-10{
+      width:10% !important;
+    }
+  </style>
 
+<!-- Begin Page Content -->
+<div class="container-fluid">
+    <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <div class="card-header py-3 bg-gradient-info">
+            <h6 class="m-0 font-weight-bold text-black">SCHOOL REPORTS</h6>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table id="datatables" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th class="th-w-20" style="white-space: nowrap">School</th>
+                            <th class="th-w-20 text-center" style="white-space: nowrap">Number of Graduates</th>
+                            <th class="th-w-20 text-center" style="white-space: nowrap">Number of Employed</th>
+                            <th class="th-w-20 text-center" style="white-space: nowrap">Number of Unemployed</th>
+
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                      <tr>
+
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Argao Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Barali Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Carmen Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Cebu City Mountain Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Daanbantayan Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Danao Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Dumanjug Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Ginatilan Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Main Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Moalboal Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Naga Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Oslob Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Pinamungajan Extension Campuss</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">San Fernando Extension Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">San Fernando Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                      <tr>
+                          <td class="th-w-20" style="white-space: nowrap">
+                            <a href="url">Tuburan Campus</a>
+                          </td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.email}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                          <td class="th-w-20" style="white-space: nowrap">{{ad.school}}</td>
+                      </tr>
+                    </tbody>
+
+                </table>
+
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+  {% for message in messages %}
+  Swal.fire({
+    position: 'center',
+    icon: 'success',
+    title: '{{message}}',
+    showConfirmButton: false,
+    timer: 3000
+  })
+  {% endfor %}
+</script>
+<!-- /.container-fluid -->
 
 
 
