--- a/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/UpdateInfo.html
@@ -1,52 +1,13 @@
 {% extends 'tracer/user/template.html'%}
 {% load static %}
-{% load widget_tweaks %}
+
 {% block content %}
 
-<style>
-    .profile-pic-div {
-        float: right;
-        max-height: 200px;
-        max-width: 200px;
-        position: relative;
-        overflow: hidden;
-    }
-    #photo {
-        height: 100%;
-        width: 100%;
-    }
-
-    #uploadBtn {
-    height: 40px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    background: rgba(0, 0, 0, 0.7);
-    border: 1px solid rgb(160, 160, 160);
-    color: wheat;
-    line-height: 30px;
-    font-family: sans-serif;
-    font-size: 15px;
-    cursor: pointer;
-    }
-
-    ::-webkit-file-upload-button {
-    font: inherit;
-    -webkit-appearance: button
-    }
-    [hidden] {
-    display: none!important
-    }
-
-</style>
-
+<link href="{% static 'css/profile.css' %}" rel="stylesheet">
 <div class="container-fluid">
   <div class="row d-flex justify-content-center">
     <div class="col-lg-12">
-      <div class=" card border-0 d-flex text-white justify-content-center mt-lg-4 mb-lg-4 ml-4 mr-4">
+      <div class=" card border-0 d-flex text-white justify-content-center mt-lg-4 mb-lg-4 ml-4 mr-4 bg-c-lite-green">
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="row mb-3 ">
@@ -84,6 +45,8 @@
                 <div class="text-center d-flex justify-content-between align-items-center mb-5">
                   <h4 class="text-right">Profile Settings</h4>
                 </div>
+                <div class="d-flex pb-2">Date Created:</div>
+                <div class="border px-3 p-1"> {{user.timestamp}}</div>
                 <div class="row mt-3">
                   <div class="col-md-12 pb-3">
                     <label class="labels">Birthdate</label>
@@ -105,7 +68,7 @@
                     <label class="labels">Contact Number</label>
                     {{grad_info.contact_number}}
                   </div>
-                  <div class="col-md-12 pb-3">
+                   <div class="col-md-12 pb-3">
                     <label class="labels">ID Number</label>
                     {{grad_info.IDNum}}
                   </div>
@@ -113,46 +76,34 @@
               </div>
             </div>
             <br>
-            <br>
-            <div class="col-md-4 mt-0">
-              <div class="pt-4">
-                <div class="text-center d-flex justify-content-between align-items-center mb-5">
-                  <h4 class="text-right"></h4>
+            <div class="col-md-4 pt-4">
+              <div class="p-1">
+                <div class="col-md-12">
+                  <label class="labels">Year Graduated</label>
+                  {{grad_info.date_graduated}}
                 </div>
-                <div class="row mt-3">
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">Year Graduated</label>
-                    {{grad_info.date_graduated}}
-                  </div>
-                  <br>
+                <br>
 
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">Course</label>
-                    {% render_field grad_info.course_type class="form-control" disabled="disabled" %}
-                  </div>
-                  <br>
+                <div class="col-md-12">
+                  <label class="labels">Course</label>
+                  {{grad_info.course_type}}
+                </div>
+                <br>
 
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">School</label>
-                    {% render_field grad_info.school class="form-control" disabled="disabled" %}
-                  </div>
-                  <br>
+                <div class="col-md-12">
+                  <label class="labels">Employment Status</label>
+                  {{grad_info.employment_status}}
+                </div>
+                <br>
+                <div class="col-md-12">
+                  <label class="labels">Job Description</label>
+                  {{grad_info.job_description}}
+                </div>
+                <br>
 
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">Employment Status</label>
-                    {{grad_info.employment_status}}
-                  </div>
-                  <br>
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">Job Description</label>
-                    {{grad_info.job_description}}
-                  </div>
-                  <br>
-
-                  <div class="col-md-12 pb-3">
-                    <label class="labels">Skills</label>
-                    {{grad_info.skill}}
-                  </div>
+                <div class="col-md-12">
+                  <label class="labels">Skills</label>
+                  {{grad_info.skill}}
                 </div>
                 <br>
 
