--- a/graduatetracer/static/css/Display.css
+++ b/graduatetracer/static/css/Display.css
@@ -204,9 +204,13 @@
     margin-top: -453px;
 }
 @media only screen and (max-width: 667px) {
-  .card.pt-0.pr-0.pl-0.pb-2.bg-gradient-light {
-    margin-left: -7px;
-    margin-right: -2px;
+  
+    .mb-3, .my-3 {
+    background-image: linear-gradient(180deg, #f8f9fc 10%, transparent 100%);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    
 }
 .button-24 {
   margin-left: 9px;
