--- a/graduatetracer/tracer/templates/tracer/admin/browse.html
+++ b/graduatetracer/tracer/templates/tracer/admin/browse.html
@@ -15,7 +15,7 @@
     .dataTables_wrapper{
       z-index: 0;
     }
-    .dataTables_length{
+    .dataTables_length{ 
       z-index: 2;
     }
 
@@ -140,7 +140,7 @@
                 {% endif %}
               </td>
               <td class="th-w-20" style="white-space: nowrap">{{ad.title}}</td>
-              <td>
+              <td class="th-w-20" style="white-space: nowrap">
                   {% if ad.job_category %}
                     {{ad.job_category}}
                   {% endif %}
