--- a/graduatetracer/tracer/templates/tracer/systemadmin/admindash.html
+++ b/graduatetracer/tracer/templates/tracer/systemadmin/admindash.html
@@ -111,8 +111,8 @@
                           src="{% static 'img/visualizer.svg'  %}" alt="Dashboard-Visualizer">
                   </div>
                   <p>Recommender System aims to lessen unemployment among college graduates with its
-                     easy to navigate features and wide array of available jobs ranging from information
-                     technology to industrial technology related work.</p>
+                     easy to navigate features and wide array of available jobs ranging from Information
+                     Technology to Industrial Technology related work.</p>
 
                   <p>Hunting for jobs has never been this easy. No more transportation costs
                     and walking under the heat of the sun to look for companies looking for
