--- a/graduatetracer/tracer/templates/tracer/admin/users.html
+++ b/graduatetracer/tracer/templates/tracer/admin/users.html
@@ -2,15 +2,79 @@
 
 {% load static %}
 {% load widget_tweaks %}
+{% load humanize %}
 
 {% block content %}
 
-<style>
-  .col-lg-1 .btn :hover{
-    background-color:bg-c-lite-green;
-    color:white;
-    border:2px solid #4CAF50;
-  }
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
+
+  <style media="screen">
+    .none{
+      display:none;
+    }
+
+    .dataTables_wrapper{
+      z-index: 0;
+    }
+    .dataTables_length{ 
+      z-index: 2;
+    }
+
+    .dataTables_filter{
+      display: none;
+    }
+
+    .dropdown-filter{
+      top: 33px !important;
+      position: relative;
+      z-index: 1;
+    }
+
+    .dataTables_length{
+      padding-bottom: 10px;
+    }
+
+    label {
+      display: inline-block;
+      margin-bottom: 0.5rem;
+      margin-top: 1.5rem;
+    }
+
+    .th-w-20{
+      width:20% !important;
+    }
+    .th-w-10{
+      width:10% !important;
+    }
+
+    .btn {
+      background-color: #ddd !important;
+      border: none !important;
+      color: black !important;
+      padding: 8px 13px !important;
+      text-align: center !important;
+      font-size: 13px !important;
+      margin: 1px -2px !important;
+      transition: 0.3s !important;
+    }
+    .btn:hover {
+      background-color: #f29263 !important;
+      color: white !important;
+    }
+    
+  </style>
+
+  <!-- Page increment -->
+  <script>
+    function show(shown, hidden) {
+
+      document.getElementById(shown).style.display='block';
+      document.getElementById(hidden).style.display='none';
+      return false;
+    }
+  </script>
+  <!-- End -->
+
 </style>
   <div class="container-fluid">
     <div class="card shadow-sm mb-4">
@@ -23,60 +87,106 @@
               </div>
             </div>
             <div class="col-lg-1">
-              <button class="btn bg-white text-white shadow-lg" type="submit" name="button" style="background-color:bg-c-lite-green;text-color:white;">Search</button>
+              <button class="btn bg-white text-white shadow-lg" type="submit" name="button">Search</button>
             </div>
           </div>
         </form>
       </div>
     </div>
-    <div class="row">
-    {% for user_info in user_infos %}
-      {% if user_info.approved %}
-        {% if user_info.school == request.user.school %}
-          <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <div class="card shadow-sm">
-              <a class="card-link" href="{% url 'user_informations' user_info.id %}">
-                <div class="card-header bg-c-lite-green text-center text-white">
-                  <div class="mt-2">
-                    {% if user_info.profile_picture %}
-                      <img class="img-profile rounded-circle shadow-sm" src="{{user_info.profile_picture.url}}" width="100" height="90" alt="User-Profile-Image">
+    <div id="Page1" class="container-fluid bg-white pr-4 pl-4 pb-3">
+      <table id="jobs" class="display table table-bordered table-responsive w-100">
+          <thead>
+              <tr>
+                <th class="th-w-20" style="white-space: nowrap">ID Number</th>
+                <th class="th-w-20" style="white-space: nowrap">Name</th>
+                <th class="th-w-20" style="white-space: nowrap">Email</th>
+                <th class="th-w-20" style="white-space: nowrap">School</th>
+                <th class="th-w-20" style="white-space: nowrap">Employment Status</th>
+                <th class="th-w-20" style="white-space: nowrap">Course</th>
+                <th class="th-w-20" style="white-space: nowrap">Date Graduated</th>
+              </tr>
+          </thead>
+          <tbody>
+            {% for ad in ads %}
+              <tr>
+                  <td class="th-w-20" style="white-space: nowrap">
+                    {% if ad.name%}
+                      {{ad.name}}
                     {% endif %}
-                    <div class="mt-1">
-                      <p>{{user_info.first_name}} {{user_info.middle_name}} {{user_info.last_name}}</p>
-                      <p>{{user_info.email}}</p>
+                  </td>
+                  <td class="th-w-20" style="white-space: nowrap">{{ad.title}}</td>
+                  <td class="th-w-20" style="white-space: nowrap">
+                      {% if ad.job_category %}
+                        {{ad.job_category}}
+                      {% endif %}
+                  </td>
+                  <td class="th-w-20" style="white-space: nowrap">
+                    {% if ad.salary %}
+                      {{ad.salary}}
+                    {% endif %}
+                  </td>
+                  <td>{{ad.date_created|naturalday}}</td>
+                  <td option-table-wid>
+                    <div class="row w-100 m-auto p-0">
+                      <div style="width:33.333%;" class="text-center pr-0">
+                        <a class href="{% url 'view_ad' ad.id %}"><i class="fas fa-eye"></i></a>
+                      </div>
+                      <div style="width:33.333%;" class="text-center">
+                        <a class="dropdown-item text-info p-0" href="{% url 'update_ad' ad.id %}"><i class="fas fa-wrench"></i></a>
+                      </div>
+                      <div style="width:33.333%;" class="text-center pl-0">
+                        <form method="post" action="{% url 'delete_ad' ad.id %}" >
+                          {% csrf_token %}
+                          <button type="submit" class="dropdown-item text-danger p-0"><i class="fas fa-trash-alt"></i></button>
+                        </form>
+                      </div>
                     </div>
-                  </div>
-                </div>
-              </a>
-              <div class="card-body">
-                <div class="mt-2">
-                    <div class="col-sm-12">
-                      <p>Skills: {{user_info.skill}}</p>
-                    </div>
-                    <div class="col-sm-12">
-                      <p>Date Graduated: {{user_info.date_graduated}}</p>
-                    </div>
-                    {% if user_info.employed %}
-                    <div class="col-sm-12">
-                      <p>Status: <span class="text-success">Employed</span></p>
-                    </div>
-                    <div class="col-sm-12">
-                      <p>Job Description: {{ user_info.job_description }}</p>
-                    </div>
-                    {% elif user_info.unemployed%}
-                    <div class="col-sm-12">
-                      <p>Status: <span class="text-danger">Unemployed</span></p>
-                    </div>
-                    {% endif%}
-
-                </div>
-              </div>
-            </div>
-          </div>
-        {% endif%}
-      {% endif%}
-    {% endfor %}
+                  </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+      </table>
     </div>
+    
+    <!-- Datatables -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
+    
+    <!-- Sweet Alert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
+    <script>
+      {% for message in messages %}
+      Swal.fire({
+        position: 'center',
+        icon: 'success',
+        title: '{{message}}',
+        showConfirmButton: false,
+        timer: 3000
+      })
+      {% endfor %}
+    </script>
+    
+    <script>
+      $(document).ready(function() {
+        var table = $('#jobs').DataTable( {
+          stateSave: false,
+          "ordering": true,
+          "columnDefs" : [{"targets":3, "type":"date-eu"}],
+          order: [],
+    
+        } );
+        $('#query0').on('change', function(){
+           table.columns(1).search(this.value).draw();
+        });
+        $('#query1').on('change', function(){
+           table.columns(2).search(this.value).draw();
+        });
+        $('#query2').on('change', function(){
+           table.columns(3).search(this.value).draw();
+        });
+    } );
+    </script>
   </div>
 
 {% endblock %}
