--- a/graduatetracer/tracer/templates/tracer/user/friendlist.html
+++ b/graduatetracer/tracer/templates/tracer/user/friendlist.html
@@ -14,7 +14,7 @@
                 <div class="mt-2">
                   <img class="img-profile rounded-circle shadow-sm" src="{{grad_info.profile_picture.url}}" width="100" height="90" alt="User-Profile-Image">
                   <div class="mt-1">
-                    <p>{{grad_info.first_name}} {{grad_info.middle_name}} {{grad_info.last_name}}</p>
+                    <h6 style="margin-bottom: -1%;text-align:center"><b>{{grad_info.first_name}} {{grad_info.middle_name}} {{grad_info.last_name}}</b></h6>
                     <p>{{grad_info.email}}</p>
                   </div>
                 </div>
