--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -5,6 +5,9 @@
     font-size:90%;
     top: 22px;
   }
+  .topbar{
+    position:sticky;
+  }
 </style>
 <!-- Topbar -->
 <form class="" action="" method="GET">
