--- a/graduatetracer/tracer/templates/tracer/admin/index.html
+++ b/graduatetracer/tracer/templates/tracer/admin/index.html
@@ -25,7 +25,7 @@
         </div>
 
           <!-- Jobs Advertised / Posted -->
-          <div class="col-xl-3 col-md-6 mb-4">
+          <div class="col-xl-6 col-md-6 mb-4">
               <div class="card border-left-success shadow-sm h-100 py-2">
                   <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -43,22 +43,7 @@
           </div>
 
           <!-- Job Requests -->
-          <div class="col-xl-3 col-md-6 mb-4">
-              <div class="card border-left-danger shadow-sm h-100 py-2">
-                  <div class="card-body">
-                      <div class="row no-gutters align-items-center">
-                          <div class="col mr-2">
-                              <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
-                                  Job Requests</div>
-                              <div class="h5 mb-0 font-weight-bold text-gray-800">{{count_job_requests}}</div>
-                          </div>
-                          <div class="col-auto">
-                              <i class="fas fa-bullhorn fa-2x text-gray-800"></i>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
+         
 
           <!-- Percentage of Employed Users -->
           <!-- <div class="col-xl-3 col-md-6 mb-4">
@@ -161,28 +146,21 @@
                   </script>
               </div>
           </div>
-          <!-- About Recommender System -->
+ <!-- Help -->
           <div class="card shadow-sm mb-4">
-              <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-info">
-                  <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-info-circle"></i>About</h6>
-              </div>
-              <div class="card-body">
-                  <div class="text-center">
-                      <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                          src="{% static 'img/visualizer.svg'  %}" alt="Dashboard-Visualizer">
-                  </div>
-                  <p>Recommender System aims to lessen unemployment among college graduates with its
-                     easy to navigate features and wide array of available jobs ranging from Information
-                     Technology to Industrial Technology related work.</p>
-
-                  <p>Hunting for jobs has never been this easy. No more transportation costs
-                    and walking under the heat of the sun to look for companies looking for
-                    qualified workers like you. Recommender System brings to you opportunities
-                    right in front of you at your own computer screens. You only have to be a college
-                    graduate to avail of these services.
-                  </p>
-              </div>
-          </div>
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-secondary">
+                <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
+            </div>
+            <div class="card-body">
+              <p>To help lessen unemployment among college graduates, you can give them job opportunities
+                by adding available jobs at <a target="_blank" rel="nofollow" href="{% url 'advertise' %}">advertise</a> and
+                to view all the jobs available you can view it on <a target="_blank" rel="nofollow" href="{% url 'browser' %}">browse</a> jobs.</p>
+                POST and GET /<a target="_blank" rel="nofollow" href="{% url 'advertise' %}"> Advertise </a>and
+                <a target="_blank" rel="nofollow" href="{% url 'browser' %}"> Browse Jobs &rarr;</a> <br>
+              
+            </div>
+        </div>
+         
         </div>
 
           <!-- Pie Chart -->
@@ -227,7 +205,7 @@
                 </div> -->
             <!-- Voting System -->
             <div class="col-lx-6 col-lg-6">
-              <div class="card shadow-sm mb-4">
+             <!-- <div class="card shadow-sm mb-4">
                   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-primary">
                       <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-vote-yea"></i>Voting Progress</h6>
                   </div>
@@ -271,21 +249,29 @@
                     </script>
                   </div>
               </div>
-                <!-- Help -->
-                <div class="card shadow-sm mb-4">
-                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-secondary">
-                        <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-question-circle"></i>Guide</h6>
-                    </div>
-                    <div class="card-body">
-                      <p>To help lessen unemployment among college graduates, you can give them job opportunities
-                        by adding available jobs at <a target="_blank" rel="nofollow" href="{% url 'advertise' %}">advertise</a> and
-                        to view all the jobs available you can view it on <a target="_blank" rel="nofollow" href="{% url 'browser' %}">browse</a> jobs.
-                        You can also view the preferred jobs of graduates in <a target="_blank" rel="nofollow" href="#">job requests</a>.</p>
-                        POST and GET /<a target="_blank" rel="nofollow" href="{% url 'advertise' %}"> Advertise </a>and
-                        <a target="_blank" rel="nofollow" href="{% url 'browser' %}"> Browse Jobs &rarr;</a> <br>
-                        Graduates<a target="_blank" rel="nofollow" href="{% url 'job_requests' %}"> Job Requests &rarr;</a>
-                    </div>
+               
+                 <!-- About Recommender System -->
+          <div class="card shadow-sm mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between bg-gradient-info">
+                <h6 class="m-0 font-weight-bold text-black"><i class="mr-2 fas fa-info-circle"></i>About</h6>
+            </div>
+            <div class="card-body">
+                <div class="text-center">
+                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
+                        src="{% static 'img/visualizer.svg'  %}" alt="Dashboard-Visualizer">
                 </div>
+                <p>Recommender System aims to lessen unemployment among college graduates with its
+                   easy to navigate features and wide array of available jobs ranging from Information
+                   Technology to Industrial Technology related work.</p>
+
+                <p>Hunting for jobs has never been this easy. No more transportation costs
+                  and walking under the heat of the sun to look for companies looking for
+                  qualified workers like you. Recommender System brings to you opportunities
+                  right in front of you at your own computer screens. You only have to be a college
+                  graduate to avail of these services.
+                </p>
+            </div>
+        </div>
             </div>
 
           </div>
